# xzepr

./: .demo_api_key  .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  DOCKER_DEMO_FIXES.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  PHASE3_IMPLEMENTATION_SUMMARY.txt  PLAN.md  PRODUCTION_IMPLEMENTATION_GUIDE.md  README.md  coverage.txt  docker-compose.prod.yaml  docker-compose.services.yaml  docker-compose.yaml  init-db.sql
.github/workflows/: ci.yaml
certs/: cert.pem  key.pem
config/: README.md  default.yaml  development.yaml  production.yaml  readme.md
config/grafana/: authorization_dashboard.json
docker/: init-keycloak.sql  keycloak-dev.yaml
docker/keycloak/: realm-export.json
docs/: README.md  api.md  docker.md  makefile.md  quickstart.md  xzepr-architecture-plan.md
docs/explanation/: agents_md_optimization.md  architecture.md  cargo_check_warning_fixes.md  ci_workflow_simplification.md  clippy_compilation_fixes.md  cloudevents_compatibility.md  cloudevents_data_structure_update.md  codebase_cleanup_plan.md  codebase_cleanup_plan_extension_implementation.md  demo_runtime_cleanup_implementation.md  distributed_tracing_architecture.md  docker_demo_tutorial_summary.md  docker_migration_improvements.md  downstream_consumer_implementation_plan.md  event_publication_implementation.md  fix_graphql_demo.md  graphql_implementation_summary.md  graphql_playground.md  how_to_documentation_cleanup_implementation.md  implementation.md  implementation_summary.md  jwt_authentication_summary.md  kafka_sasl_phase2_verification.md  kafka_sasl_phase3_configuration_loading.md  kafka_sasl_phase3_summary.md  kafka_sasl_phase3_validation_checklist.md  kafka_sasl_phase4_testing_implementation.md  kafka_sasl_phase4_testing_summary.md  kafka_sasl_phase4_validation_checklist.md  kafka_sasl_phase5_documentation_implementation.md  kafka_sasl_phase5_summary.md  kafka_sasl_phase5_validation_checklist.md  kafka_sasl_phase6_delivery.md  kafka_sasl_phase6_security_implementation.md  kafka_sasl_phase6_summary.md  kafka_sasl_phase6_validation_checklist.md  kafka_sasl_phase7_migration_implementation.md  kafka_sasl_phase7_summary.md  kafka_sasl_scram_authentication_plan.md  kafka_sasl_scram_feature_complete.md  (+93 more)
docs/explanations/: README.md  agents_md_optimization.md  architecture.md  clippy_fixes.md  cloudevents_compatibility.md  cloudevents_data_structure_update.md  event_publication_implementation.md  examples_validation.md  fix_graphql_demo.md  graphql_demo_test_results.md  graphql_implementation_summary.md  implement_custom_metrics.md  implement_jwt_authentication.md  implement_postgres_repositories.md  implement_security_hardening.md  implementation.md  jwt_authentication.md  jwt_authentication_summary.md  kafka_sasl_phase2_verification.md  kafka_sasl_phase3_summary.md  kafka_sasl_phase3_validation_checklist.md  kafka_sasl_phase4_testing_implementation.md  kafka_sasl_phase4_testing_summary.md  kafka_sasl_phase4_validation_checklist.md  kafka_sasl_phase5_documentation_implementation.md  kafka_sasl_phase5_summary.md  kafka_sasl_phase5_validation_checklist.md  kafka_sasl_phase6_delivery.md  kafka_sasl_phase6_security_implementation.md  kafka_sasl_phase6_summary.md  kafka_sasl_phase6_validation_checklist.md  kafka_sasl_phase7_migration_implementation.md  (+21 more)
examples/: cloudevents_format.rs  generate_epr_events.py  kafka_with_auth.rs  xzepr_client.rs
migrations/: 20240101000001_create_users_table.sql  20240101000002_create_events_table.sql  20240201000001_change_uuid_to_ulid.sql  20250115000001_update_users_for_oidc.sql  20250120000001_add_ownership_and_membership.sql  readme.md
policies/: README.md  rbac.rego
scripts/: build-docker.sh  health-check.sh  make-completions.sh  test_demo.sh
src/: error.rs  lib.rs  main.rs  mod.rs
tests/: auth_tests.rs  database_tests.rs  event_tests.rs  integration_tests.rs  kafka_auth_integration_tests.rs  rbac_rest_integration.rs  security_regression_tests.rs
(+153 files in other folders)
